src/test/contracts/negative/interpreter_tests/test_run_types3.jsligo
const foo = (x: int): int => {return x};
const bar = Test.run(foo, {field: "toto"});
